some code organization

--- a/NeuralPDE/wave_equation_NeuralPDE.ipynb
+++ b/NeuralPDE/wave_equation_NeuralPDE.ipynb
@@ -1610,12 +1610,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uncomment below to load in params"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
     "# using JLD2\n",
+    "\n",
     "# res = jldopen(\"wave_eq_sol-X-bcs.jld2\")\n",
     "# res = jldopen(\"wave_eq_sol-nice.jld2\")"
    ]
